Fix checkbox spacing

--- a/styles/menu-editor.less
+++ b/styles/menu-editor.less
@@ -11,6 +11,7 @@
 
   li.submenu-item input[type="checkbox"] {
     margin-left: -1px;
+    margin-right: 0.5em;
   }
 
   li.menu-item input[type="checkbox"] {
